feat: enhance testing scripts and improve README documentation
- Added new test scripts in package.json for health checks and watch modes.
- Updated README to include detailed project structure, testing instructions, and CI/CD integration.
- Refactored petHelpers.js to improve pet creation logic and error handling.
- Enhanced pet.spec.js with setup and teardown processes for better test isolation and reliability.

--- a/package.json
+++ b/package.json
@@ -100,7 +100,11 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "mocha --require dotenv/config --recursive test/*.spec.js"
+    "test": "mocha --require dotenv/config --recursive test/*.spec.js",
+    "test:health": "mocha --require dotenv/config test/health-check.spec.js",
+    "test:watch": "mocha --require dotenv/config --watch test/*.spec.js",
+    "test:watch:all": "mocha --require dotenv/config --watch test/**/*.spec.js",
+    "test:watch:pet": "mocha --require dotenv/config --watch test/pet.spec.js"
   },
   "keywords": [],
   "author": "",
